--- a/README.rdoc
+++ b/README.rdoc
@@ -60,7 +60,7 @@ List of added elliptic curves:
 
 === Contributing
 
-Bug reports and pull requests are welcome on GitHub at https://github.com/[USERNAME]/crypto_gost. This project is intended to be a safe, welcoming space for collaboration, and contributors are expected to adhere to the [Contributor Covenant](http://contributor-covenant.org) code of conduct.
+Bug reports and pull requests are welcome on GitHub at https://github.com/wilddima/crypto_gost. This project is intended to be a safe, welcoming space for collaboration, and contributors are expected to adhere to the [Contributor Covenant](http://contributor-covenant.org) code of conduct.
 
 
 === License
